removed few issues

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,6 +5,9 @@ $text_color: red
     height: 200px
     background-color: blue
 
+div
+    color: yellow
+
 h1
     color: $text_color
     font-style: 50px
