--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -18,6 +18,6 @@ h2
     h3
         color: green
     &_color
-        background-color: red
+        background-color: blue
         button
             @include box
