--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -12,7 +12,7 @@ h1
     color: $text_color
     font-style: 50px
 h2 
-    color: aqua
+    color: #0ef734
 .block
     background-color: black
     h3
